[package]
edition = "2021"
name = "halo2halo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fibo1"
path = "src/fibo1.rs"

[dependencies]
halo2_proofs = { version = "0.2.0", features = ["dev-graph"]}
plotters = { version = "0.3.0" }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.8", features = ["criterion", "flamegraph"] } # MSRV 1.56

