[package]
edition = "2021"
name = "halo2halo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fibo1"
path = "src/fibo1.rs"

[[bin]]
name = "function"
path = "src/function.rs"

[dependencies]
halo2_proofs = { version = "0.2.0", features = ["dev-graph"]}
plotters = { version = "0.3.0" }